<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Muslim Pro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_welcome_text">Welcome</string>
    <string name="txt_second_slider_head">Location</string>
    <string name="txt_third_slider_head">Notifications</string>
    <string name="txt_first_slider_text">Thank you for installing.\nWe will need some permission\nto ensure\nthe optimal functionality</string>
    <string name="txt_second_slider_text">To provide accurate prayer\ntimes the app need to know\nyour location</string>
    <string name="txt_third_slider_text">The app need to provide\nreminder for upcoming\nprayers. You need to allow\nnotifications for this\nto work.</string>
    <string name="txt_swip_slider_text">Swip or tap next</string>
    <string name="txt_slider_text_hint">Enter the name of your city</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_location_permission">Permission Needed</string>
    <string name="text_location_permission">Allow Permission for Location</string>
    <string name="ok">OK</string>

    <string name="prayer_time">Prayer Time</string>
    <string name="prayer_times">05:00 AM</string>
    <string name="fajr">Fajr</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="magrib">Magrib</string>
    <string name="isha">Isha</string>
    <string name="currentDate">31 December, 2019</string>
    <string name="hajj_umrah"><![CDATA[Hajj & Umrah]]></string>
    <string name="sehri"> SEHRI</string>
    <string name="iftar"> IFTAR</string>
    <string name="nextSsehri">Next SEHRI</string>
    <string name="nextIftar">Next IFTAR</string>
    <string name="give_permission">Give Permission</string>
    <string name="days">Day</string>
    <string name="sehri_end">Sehri End</string>
    <string name="iftar_start">Iftar At</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="zero">00</string>
    <string name="second">Second</string>
    <string name="next">Next</string>
    <string-array name="custom_weekdays">
        <item>Su</item>
        <item>Mo</item>
        <item>Tu</item>
        <item>We</item>
        <item>Th</item>
        <item>Fr</item>
        <item>Sa</item>
    </string-array>

    <string-array name="custom_months">
        <item>Muharram</item>
        <item>Safar</item>
        <item>Rabi\' I</item>
        <item>Rabi\' II</item>
        <item>Jumada I</item>
        <item>Jumada II</item>
        <item>Rajab</item>
        <item>Sha\'ban</item>
        <item>Ramadan</item>
        <item>Shawwal</item>
        <item>Dhu al-Qi‘dah</item>
        <item>Dhu al-Hijjah</item>
    </string-array>

    <string name="placeApiKey">AIzaSyBbYnWfoDdGCtyiR0UWBDoXZeat7y7X1Mc</string>
    <string name="search">Search</string>
    <string name="last_read_position">Last Read Position</string>
    <string name="the_meaning">The Meaning</string>
    <string name="text" tools:ignore="StringEscaping"> time start at </string>
    <string name="text2" tools:ignore="StringEscaping"> time end at </string>
    <string name="remaining_text" tools:ignore="StringEscaping"> and only remaining 15 minutes </string>
    <string name="textEmpty">--:--</string>
    <string name="permission_click_here">If you see stat line your location to makkah. Please allow your location permission. Click Here</string>
</resources>
