<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".introSlider.FirstSlider">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/font_nirmala"
            android:text="@string/txt_welcome_text"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_nirmala"
            android:text="@string/txt_first_slider_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_nirmala"
            android:text="@string/txt_swip_slider_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_changePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/font_erasbd"
        android:text="@string/next"
        android:textColor="@color/colorBlack" />

</RelativeLayout>