<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".introSlider.SecondSlider">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/font_nirmala"
            android:text="@string/txt_second_slider_head"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/font_nirmala"
            android:text="@string/txt_second_slider_text"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/user_city_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/city_name_bg_shape"
            android:drawableStart="@drawable/location"
            android:drawablePadding="15dp"
            android:fontFamily="@font/font_nirmala"
            android:paddingStart="20dp"
            android:hint="@string/txt_slider_text_hint"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/buttonLocationPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/city_name_bg_shape"
            android:backgroundTint="@color/colorButton"
            android:fontFamily="@font/font_nirmala"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/give_permission"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_changePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/font_erasbd"
        android:visibility="invisible"
        android:text="@string/next"
        android:textColor="@color/colorBlack" />
</RelativeLayout>