<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PrayerTimeFragment"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/image_asr"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/main_bg"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/ivPreviousDay"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_navigation_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivNextDay"
            app:layout_constraintStart_toEndOf="@+id/ivPreviousDay"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNextDay"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@null"
            android:src="@drawable/ic_navigation_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutPraTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:paddingBottom="8dp"
            android:background="@drawable/main_bg">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:contentDescription="@null"
                android:src="@drawable/fazr_icon"
                android:tint="@color/colorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/fajr"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPTFajr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/prayer_times"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivFajrAlarm"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/alarm_on"
                android:tint="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:background="@drawable/main_bg"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:contentDescription="@null"
                android:src="@drawable/dhuhr_icon"
                android:tint="@color/colorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/dhuhr"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPTDhuhr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/prayer_times"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivDhuhrAlarm"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/alarm_off"
                android:tint="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:background="@drawable/main_bg"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:contentDescription="@null"
                android:src="@drawable/asr_icon"
                android:tint="@color/colorBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/asr"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPTAsr"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/prayer_times"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivAsrAlarm"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/alarm_on"
                android:tint="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:background="@drawable/main_bg"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:contentDescription="@null"
                android:src="@drawable/magrib_icon"
                android:tint="@color/colorBlack" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/magrib"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPTMagrib"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/prayer_times"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivMagribAlarm"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/alarm_off"
                android:tint="@color/colorBlack" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="14dp"
            android:background="@drawable/main_bg"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="0.4"
                android:contentDescription="@null"
                android:src="@drawable/isha_icon"
                android:tint="@color/colorBlack" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:text="@string/isha"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPTIsha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:text="@string/prayer_times"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivIshaAlarm"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="0.5"
                android:contentDescription="@null"
                android:gravity="center"
                android:src="@drawable/alarm_on"
                android:tint="@color/colorBlack" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>